--- a/react-app/src/components/RecipeDetail/index.css
+++ b/react-app/src/components/RecipeDetail/index.css
@@ -403,7 +403,7 @@ div.bot-container>div>p.bubble {
 }
 
 .detail-wrapper {
-    margin-top: 30px;
+    margin-top: 0px;
     display: flex;
 }
 
